# pi-controller

./: README.md  example_run.sh  pyproject.toml
ex_wall_pi_controller/: audio_listener.py  constants.py  frame.py  http_listener.py  led_panel.py  local_entrypoint.py  ntfy_listener.py
ex_wall_pi_controller/effects/: __init__.py  abstract_effect.py  audio_effect.py  image_effect.py  two_color_random_effect.py
ex_wall_pi_controller/image_handling/: image_handler.py
